2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* DataObject.cs: Add the other IDataObject interface.

2008-05-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeWin32Classic.cs: Refactored: extracted DrawStatusBarBackground,
	DrawStatusBarSizingGrip, DrawStatusBarPanelBackground.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCheckBoxCell.cs, DataGridViewImageCell.cs: Fix parameter names.
	* ListView.cs: Hide non-public API.
	* MaskedTextBox.cs: Remove extra attribute.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewImageCell.cs: Use formatted value instead of value
	to calculate preferred size.

2008-05-01  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Move some initialization around so that selected_indices
	is not accessed before it is created.

2008-05-01  Jonathan Pobst  <monkey@jpobst.com>

	* InputLanguageCollection.cs: Implement the collection better.
	[Fixes bug #385506]

2008-05-01  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripDropDownItem.cs: Get the correct event object for
	DropDownItemClicked.
	* ToolStripMenuItem.cs: Raise DropDownItemClicked on our owner.
	[Fixes bug #385475]

2008-05-01  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRowCollection.cs: We don't currently support shared 
	rows.  Should fix test failures caused by previous commit.

2008-04-30  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRow.cs: Fixes for cloning the row, ensure header cell's
	datagridview gets set.  Only paint cells in visible columns.
	* DataGridViewCell.cs: Draw border after cell content.
	* DataGridView.cs: Invalidate after setting some properties.  Only
	use visible columns.  Fit hit test bug with areas in the col/row header
	area but not in a row or col.  Implement UpdateCell/Row methods.

2008-04-30  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewElement.cs: Don't throw NIEX.
	* DataGridViewColumnHeaderCell.cs: Draw error icons for top left header cells.